--- a/index.html
+++ b/index.html
@@ -4,10 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science Day Celebration</title>
+
+    <!-- Add some styling for animation and colors -->
+    <style>
+        body {
+            background-color: #f0f0f0;
+            color: #333;
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+
+        h1 {
+            color: #007BFF;
+            font-size: 2.5em;
+            animation: bounce 1.5s infinite alternate;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        a {
+            color: #28A745;
+            text-decoration: none;
+            font-weight: bold;
+            border-bottom: 2px solid #28A745;
+            padding-bottom: 2px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        a:hover {
+            color: #218838;
+            border-bottom: 2px solid #218838;
+        }
+
+        img {
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            animation: rotate 4s infinite linear;
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
+        @keyframes rotate {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Science Day Celebration</h1>
-    <p>Learn about the rules and regulations of our program and register for the celebration!</p>
+    <p>Explore the wonders of science and join us in the celebration!</p>
     <p><a href="YOUR_REGISTRATION_LINK">Register Now</a></p>
+
+    <!-- Add science-related images -->
+    <img src="https://via.placeholder.com/300" alt="Science Image 1">
+    <img src="https://via.placeholder.com/300" alt="Science Image 2">
+
+    <!-- Add more images as needed -->
+
+    <!-- Replace YOUR_REGISTRATION_LINK with the actual registration link -->
 </body>
 </html>
