--- a/index.html
+++ b/index.html
@@ -3,79 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Science Day Celebration</title>
+    <title>Math Puzzle and Poster Making Challenge</title>
 
-    <!-- Add some styling for animation and colors -->
     <style>
         body {
-            background-color: #f0f0f0;
-            color: #333;
             font-family: 'Arial', sans-serif;
-            text-align: center;
-            margin: 50px;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f5f5f5;
+            color: #333;
         }
 
         h1 {
             color: #007BFF;
-            font-size: 2.5em;
-            animation: bounce 1.5s infinite alternate;
+            text-align: center;
+        }
+
+        h2 {
+            color: #28A745;
         }
 
         p {
-            font-size: 1.2em;
+            font-size: 1.1em;
+            line-height: 1.5;
         }
 
-        a {
-            color: #28A745;
-            text-decoration: none;
-            font-weight: bold;
-            border-bottom: 2px solid #28A745;
-            padding-bottom: 2px;
-            transition: all 0.3s ease-in-out;
+        ul {
+            list-style-type: none;
         }
 
-        a:hover {
-            color: #218838;
-            border-bottom: 2px solid #218838;
-        }
-
-        img {
-            margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            animation: rotate 4s infinite linear;
-        }
-
-        @keyframes bounce {
-            0%, 100% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-20px);
-            }
-        }
-
-        @keyframes rotate {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
+        footer {
+            margin-top: 50px;
+            text-align: center;
+            color: #555;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Science Day Celebration</h1>
-    <p>Explore the wonders of science and join us in the celebration!</p>
-    <p><a href="YOUR_REGISTRATION_LINK">Register Now</a></p>
 
-    <!-- Add science-related images -->
-    <img src="https://via.placeholder.com/300" alt="Science Image 1">
-    <img src="https://via.placeholder.com/300" alt="Science Image 2">
+    <h1>Math Puzzle and Poster Making Challenge</h1>
 
-    <!-- Add more images as needed -->
+    <section id="mathPuzzle">
+        <h2>Math Puzzle Challenge Rules and Regulations:</h2>
+        <ul>
+            <li>Group Composition: Each group must consist of two participants.</li>
+            <li>Electronic Gadgets: The use of electronic gadgets (ELC) is strictly prohibited during the puzzle challenge.</li>
+            <li>Time Limit: The puzzle challenge has a duration of 30 minutes. Groups must complete the puzzle within this time frame.</li>
+            <!-- Add more rules as needed -->
+        </ul>
+    </section>
 
-    <!-- Replace YOUR_REGISTRATION_LINK with the actual registration link -->
+    <section id="posterMaking">
+        <h2>Poster Making Competition Rules and Regulations:</h2>
+        <ul>
+            <li>Group Composition: Each group must consist of two participants.</li>
+            <li>Electronic Gadgets: The use of electronic gadgets (ELC) is strictly prohibited during the poster making competition.</li>
+            <li>Topic: The poster must be related to a physics-related topic chosen by the participants.</li>
+            <!-- Add more rules as needed -->
+        </ul>
+    </section>
+
+    <section id="webPageInfo">
+        <h2>Web Page Information:</h2>
+        <h3>Title: Math Puzzle and Poster Making Challenge</h3>
+        <p>Introduction: Welcome to the Math Puzzle Challenge and Poster Making Competition! Here you will find all the rules and regulations for participating in these exciting events.</p>
+
+        <h3>Math Puzzle Challenge:</h3>
+        <ul>
+            <li>Overview</li>
+            <li>Rules and Regulations</li>
+            <li>How to Participate</li>
+            <li>Prizes</li>
+        </ul>
+
+        <h3>Poster Making Competition:</h3>
+        <ul>
+            <li>Overview</li>
+            <li>Rules and Regulations</li>
+            <li>How to Participate</li>
+            <li>Prizes</li>
+        </ul>
+
+        <h3>Registration:</h3>
+        <p>Participants can register for the events by filling out the registration form provided on the website.</p>
+
+        <h3>Contact Information:</h3>
+        <p>For any inquiries or clarifications, please contact [Organizer's Email Address].</p>
+
+        <h3>Important Dates:</h3>
+        <p>Mention the date, time, and venue for the event.</p>
+    </section>
+
+    <footer>
+        <p>&copy; [Year] Math Puzzle and Poster Making Challenge. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
