--- a/index.html
+++ b/index.html
@@ -3,33 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Puzzle and Poster Making Challenge</title>
+    <title>National Science Day Celebration</title>
 
     <style>
         body {
             font-family: 'Arial', sans-serif;
             margin: 20px;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #e6f7ff;
             color: #333;
         }
 
-        h1 {
-            color: #007BFF;
+        h1, h2 {
+            color: #004080;
             text-align: center;
         }
 
-        h2 {
-            color: #28A745;
-        }
-
         p {
-            font-size: 1.1em;
+            font-size: 1.2em;
             line-height: 1.5;
+            color: #666;
         }
 
         ul {
             list-style-type: none;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        #slideshow {
+            max-width: 600px;
+            margin: 20px auto;
+            overflow: hidden;
+            position: relative;
+        }
+
+        #slideshow img {
+            display: none;
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .btn-container {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            margin: 0 5px;
+            background-color: #004080;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         footer {
@@ -38,65 +71,70 @@
             color: #555;
             font-size: 0.9em;
         }
+
+        #institute-logo {
+            max-width: 150px;
+            margin: 20px auto;
+            display: block;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Math Puzzle and Poster Making Challenge</h1>
+    <!-- Institute Logo -->
+    <img id="institute-logo" src="https://github.com/nithingowda381/Science-event-register-form/blob/main/VKITLOGO.png" alt="Institute Logo">
 
-    <section id="mathPuzzle">
-        <h2>Math Puzzle Challenge Rules and Regulations:</h2>
-        <ul>
-            <li>Group Composition: Each group must consist of two participants.</li>
-            <li>Electronic Gadgets: The use of electronic gadgets (ELC) is strictly prohibited during the puzzle challenge.</li>
-            <li>Time Limit: The puzzle challenge has a duration of 30 minutes. Groups must complete the puzzle within this time frame.</li>
-            <!-- Add more rules as needed -->
-        </ul>
+    <!-- Welcome Section with Sir C.V. Raman's Image -->
+    <section id="welcome">
+        <img src="https://github.com/nithingowda381/Science-event-register-form/blob/main/national-science-day%20(1).webp" alt="Sir C.V. Raman">
+        <h1>Welcome to the National Science Day Celebration</h1>
+        <p>Join us in commemorating the discovery of the Raman Effect by Sir C.V. Raman and celebrating the spirit of science!</p>
+        <div class="btn-container">
+            <button class="btn" onclick="window.location.href='YOUR_REGISTRATION_LINK'">Click Here to Register</button>
+        </div>
     </section>
 
-    <section id="posterMaking">
-        <h2>Poster Making Competition Rules and Regulations:</h2>
-        <ul>
-            <li>Group Composition: Each group must consist of two participants.</li>
-            <li>Electronic Gadgets: The use of electronic gadgets (ELC) is strictly prohibited during the poster making competition.</li>
-            <li>Topic: The poster must be related to a physics-related topic chosen by the participants.</li>
-            <!-- Add more rules as needed -->
-        </ul>
+    <section id="scienceDayInfo">
+        <h2>National Science Day</h2>
+        <p>On National Science Day, we celebrate the discovery of the Raman Effect by Sir C.V. Raman. It's a day to honor the contributions of scientists and promote scientific temper in the community.</p>
     </section>
 
-    <section id="webPageInfo">
-        <h2>Web Page Information:</h2>
-        <h3>Title: Math Puzzle and Poster Making Challenge</h3>
-        <p>Introduction: Welcome to the Math Puzzle Challenge and Poster Making Competition! Here you will find all the rules and regulations for participating in these exciting events.</p>
-
-        <h3>Math Puzzle Challenge:</h3>
-        <ul>
-            <li>Overview</li>
-            <li>Rules and Regulations</li>
-            <li>How to Participate</li>
-            <li>Prizes</li>
-        </ul>
-
-        <h3>Poster Making Competition:</h3>
-        <ul>
-            <li>Overview</li>
-            <li>Rules and Regulations</li>
-            <li>How to Participate</li>
-            <li>Prizes</li>
-        </ul>
-
-        <h3>Registration:</h3>
-        <p>Participants can register for the events by filling out the registration form provided on the website.</p>
-
-        <h3>Contact Information:</h3>
-        <p>For any inquiries or clarifications, please contact [Organizer's Email Address].</p>
-
-        <h3>Important Dates:</h3>
-        <p>Mention the date, time, and venue for the event.</p>
+    <!-- Image Slideshow -->
+    <section id="slideshow">
+        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image1.jpg" alt="National Science Day Image 1">
+        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image2.jpg" alt="National Science Day Image 2">
+        <!-- Add more images as needed -->
     </section>
+
+    <div class="btn-container">
+        <button class="btn" onclick="prevImage()">Previous</button>
+        <button class="btn" onclick="nextImage()">Next</button>
+    </div>
+
+    <script>
+        let currentImage = 0;
+        const images = document.querySelectorAll('#slideshow img');
+
+        function showImage(index) {
+            images.forEach(img => img.style.display = 'none');
+            images[index].style.display = 'block';
+        }
+
+        function nextImage() {
+            currentImage = (currentImage + 1) % images.length;
+            showImage(currentImage);
+        }
+
+        function prevImage() {
+            currentImage = (currentImage - 1 + images.length) % images.length;
+            showImage(currentImage);
+        }
+
+        showImage(currentImage);
+    </script>
 
     <footer>
-        <p>&copy; [Year] Math Puzzle and Poster Making Challenge. All rights reserved.</p>
+        <p>&copy; [Year] National Science Day Celebration. All rights reserved.</p>
     </footer>
 
 </body>
