--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 <body>
 
     <!-- Institute Logo -->
-    <img id="institute-logo" src="https://github.com/nithingowda381/Science-event-register-form/blob/main/VKITLOGO.png" alt="Institute Logo">
+    <img id="institute-logo" src="https://github.com/nithingowda381/Science-event-register-form/blob/main/VKITLOGO.png?raw=true" alt="Institute Logo">
 
     <!-- Welcome Section with Sir C.V. Raman's Image -->
     <section id="welcome">
-        <img src="https://github.com/nithingowda381/Science-event-register-form/blob/main/national-science-day%20(1).webp" alt="Sir C.V. Raman">
+        <img src="https://raw.githubusercontent.com/nithingowda381/Science-event-register-form/main/national-science-day%20(1).webp" alt="Sir C.V. Raman">
         <h1>Welcome to the National Science Day Celebration</h1>
         <p>Join us in commemorating the discovery of the Raman Effect by Sir C.V. Raman and celebrating the spirit of science!</p>
         <div class="btn-container">
