--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- Welcome Section with Sir C.V. Raman's Image -->
     <section id="welcome">
-        <img src="https://raw.githubusercontent.com/nithingowda381/Science-event-register-form/main/national-science-day%20(1).webp" alt="Sir C.V. Raman">
+        <img src="https://github.com/nithingowda381/Science-event-register-form/blob/main/images.jpeg?raw=true" alt="Sir C.V. Raman">
         <h1>Welcome to the National Science Day Celebration</h1>
         <p>Join us in commemorating the discovery of the Raman Effect by Sir C.V. Raman and celebrating the spirit of science!</p>
         <div class="btn-container">
