--- a/science.html
+++ b/science.html
@@ -78,6 +78,9 @@
             display: block;
         }
     </style>
+
+    <!-- Link to your SCSS file -->
+    <link rel="stylesheet" href="assets/css/style.scss">
 </head>
 <body>
 
