--- a/science.html
+++ b/science.html
@@ -104,8 +104,8 @@
 
     <!-- Image Slideshow -->
     <section id="slideshow">
-        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image1.jpg" alt="National Science Day Image 1">
-        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image2.jpg" alt="National Science Day Image 2">
+        <img src="https://raw.githubusercontent.com/nithingowda381/YourRepository/main/images/images.jpg" alt="National Science Day Image 1">
+        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/national-science-day(1).webp" alt="National Science Day Image 2">
         <!-- Add more images as needed -->
     </section>
 
