--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         }
 
         #institute-logo {
-            max-width: 150px;
+            width: 2100px;  /* Updated width */
+            height: 201px; /* Updated height */
             margin: 20px auto;
             display: block;
         }
