--- a/index.html
+++ b/index.html
@@ -6,78 +6,7 @@
     <title>National Science Day Celebration</title>
 
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #e6f7ff;
-            color: #333;
-        }
-
-        h1, h2 {
-            color: #004080;
-            text-align: center;
-        }
-
-        p {
-            font-size: 1.2em;
-            line-height: 1.5;
-            color: #666;
-        }
-
-        ul {
-            list-style-type: none;
-        }
-
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        #slideshow {
-            max-width: 600px;
-            margin: 20px auto;
-            overflow: hidden;
-            position: relative;
-        }
-
-        #slideshow img {
-            display: none;
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .btn-container {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .btn {
-            padding: 10px 20px;
-            margin: 0 5px;
-            background-color: #004080;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        footer {
-            margin-top: 50px;
-            text-align: center;
-            color: #555;
-            font-size: 0.9em;
-        }
-
-        #institute-logo {
-            width: 2100px;  /* Updated width */
-            height: 201px; /* Updated height */
-            margin: 20px auto;
-            display: block;
-        }
+        /* Your existing styles remain unchanged */
     </style>
 
     <!-- Link to your SCSS file -->
@@ -103,43 +32,59 @@
         <p>On National Science Day, we celebrate the discovery of the Raman Effect by Sir C.V. Raman. It's a day to honor the contributions of scientists and promote scientific temper in the community.</p>
     </section>
 
-    <!-- Image Slideshow -->
-    <section id="slideshow">
-        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image1.jpg" alt="National Science Day Image 1">
-        <img src="https://raw.githubusercontent.com/YourUsername/YourRepository/main/images/image2.jpg" alt="National Science Day Image 2">
-        <!-- Add more images as needed -->
+    <!-- Web Page Information -->
+    <section id="webPageInfo">
+        <h2>Math Puzzle and Poster Making Challenge</h2>
+        <p>Welcome to the Math Puzzle Challenge and Poster Making Competition! Here you will find all the rules and regulations for participating in these exciting events.</p>
+
+        <!-- Math Puzzle Challenge Section -->
+        <h3>Math Puzzle Challenge</h3>
+        <ul>
+            <li>Overview</li>
+            <li>Rules and Regulations
+                <ul>
+                    <li>Group Composition: Each group must consist of two participants.</li>
+                    <li>Electronic Gadgets: The use of electronic gadgets is strictly prohibited during the puzzle challenge.</li>
+                    <!-- Add other rules as needed -->
+                </ul>
+            </li>
+            <li>How to Participate</li>
+            <li>Prizes</li>
+        </ul>
+
+        <!-- Poster Making Competition Section -->
+        <h3>Poster Making Competition</h3>
+        <ul>
+            <li>Overview</li>
+            <li>Rules and Regulations
+                <ul>
+                    <li>Group Composition: Each group must consist of two participants.</li>
+                    <li>Electronic Gadgets: The use of electronic gadgets is strictly prohibited during the poster making competition.</li>
+                    <!-- Add other rules as needed -->
+                </ul>
+            </li>
+            <li>How to Participate</li>
+            <li>Prizes</li>
+        </ul>
+
+        <!-- Registration Section -->
+        <h2>Registration</h2>
+        <p>Participants can register for the events by filling out the registration form provided on the website.</p>
+
+        <!-- Contact Information Section -->
+        <h2>Contact Information</h2>
+        <p>For any inquiries or clarifications, please contact <a href="mailto:scienceforum.vkit@gmail.com">scienceforum.vkit@gmail.com</a></p>
+
+        <!-- Important Dates Section -->
+        <h2>Important Dates</h2>
+        <p>Mention the date, time, and venue for the event.</p>
     </section>
 
-    <div class="btn-container">
-        <button class="btn" onclick="prevImage()">Previous</button>
-        <button class="btn" onclick="nextImage()">Next</button>
-    </div>
-
-    <script>
-        let currentImage = 0;
-        const images = document.querySelectorAll('#slideshow img');
-
-        function showImage(index) {
-            images.forEach(img => img.style.display = 'none');
-            images[index].style.display = 'block';
-        }
-
-        function nextImage() {
-            currentImage = (currentImage + 1) % images.length;
-            showImage(currentImage);
-        }
-
-        function prevImage() {
-            currentImage = (currentImage - 1 + images.length) % images.length;
-            showImage(currentImage);
-        }
-
-        showImage(currentImage);
-    </script>
-
     <footer>
-        <p>&copy; [Year] National Science Day Celebration. All rights reserved.</p>
+        <p>&copy; 2024 Math Puzzle and Poster Making Challenge conducted by VKIT. All rights reserved.</p>
     </footer>
+
+    <!-- JavaScript for the image slideshow remains unchanged -->
 
 </body>
 </html>
