--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         #content-container {
             width: 80%; /* Adjust the width as needed */
             max-width: 1200px; /* Set a maximum width if desired */
+            margin: 0 auto; /* Center the content container */
         }
 
         #institute-logo {
             display: block;
-            margin: 0 auto;
+            margin: 20px auto; /* Adjust the margin as needed */
             max-width: 100%; /* Ensure the logo doesn't exceed its original size */
         }
 
@@ -31,15 +32,11 @@
         #webPageInfo,
         footer {
             margin-bottom: 20px;
+            text-align: left;
         }
 
         .btn-container {
             text-align: center;
-        }
-
-        #scienceDayInfo,
-        #webPageInfo {
-            text-align: left;
         }
 
         footer {
