--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         
         <!-- Important Dates Section -->
-        <h2>Important Dates</h2>
+        <h2 style="font-family: Apple Chancery, cursive">Important Dates</h2>
         <p>Date : 28th FEB 2024</p>
         <p>Time: 9.00 Am</p> 
         <p>Location : Vivekananda Institute Of Technology, Gudimavu, Kengeri, Banglore-74.</p>
