--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         // JavaScript for dynamic background and button switch animation
         function toggleRegistration() {
             // Redirect to the specified link
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSftOdheBd9eaEK_0jwPQi-z2UQORZ_h_JPxK6GBLpgNM-LkYg/viewform?vc=0&c=0&w=1&flr=0&usp=mail_form_link";
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSe26xmAQ1Nxa_nk3jhwhKVtNI8ul7BqAXASx7eb_N6-X-xgmA/viewform?vc=0&c=0&w=1&flr=0";
         }
 
         function getRandomColor() {
